--- a/index.html
+++ b/index.html
@@ -28,62 +28,64 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <div style="margin: 0 auto;" id ="livetime"></div>
     <div class="container">
       <!-- row 1 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">9AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-1">Save</button>
         </div>
         <!-- row 2 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">10AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-2">Save</button>
         </div>
         <!-- row 3 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">11AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-3">Save</button>
         </div>
         <!-- row 4 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">12PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-4">Save</button>
         </div>
         <!-- row 5 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">1PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-5">Save</button>
         </div>
         <!-- row 6 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">2PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-6">Save</button>
         </div>
         <!-- row 7 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">3PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-7">Save</button>
         </div>
         <!-- row 8 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">4PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-8">Save</button>
         </div>
         <!-- row 9 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">5PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-9">Save</button>
         </div>       
     </div>
+    
 
 
     
