--- a/index.html
+++ b/index.html
@@ -34,55 +34,55 @@
         <div class="row time">
           <div class="col-md-1 rowStyle ">9AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-1">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "9AM-log">Save</button>
         </div>
         <!-- row 2 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">10AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-2">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "10AM-log">Save</button>
         </div>
         <!-- row 3 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">11AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-3">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "11AM-log">Save</button>
         </div>
         <!-- row 4 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">12PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-4">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "12PM-log">Save</button>
         </div>
         <!-- row 5 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">1PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-5">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "1PM-log">Save</button>
         </div>
         <!-- row 6 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">2PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-6">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "2PM-log">Save</button>
         </div>
         <!-- row 7 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">3PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-7">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "3PM-log">Save</button>
         </div>
         <!-- row 8 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">4PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-8">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "4PM-log">Save</button>
         </div>
         <!-- row 9 -->
         <div class="row time">
           <div class="col-md-1 rowStyle ">5PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "button-9">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "5PM-log">Save</button>
         </div>       
     </div>
     
