--- a/index.html
+++ b/index.html
@@ -34,61 +34,57 @@
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">9AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "9AM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-9-log">Save</button>
         </div>
         <!-- row 2 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">10AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "10AM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-10-log">Save</button>
         </div>
         <!-- row 3 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">11AM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "11AM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-11-log">Save</button>
         </div>
         <!-- row 4 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">12PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "12PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-12-log">Save</button>
         </div>
         <!-- row 5 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">1PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "1PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-1-log">Save</button>
         </div>
         <!-- row 6 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">2PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "2PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-2-log">Save</button>
         </div>
         <!-- row 7 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">3PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "3PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-3-log">Save</button>
         </div>
         <!-- row 8 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">4PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "4PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-4-log">Save</button>
         </div>
         <!-- row 9 -->
         <div class="row time">
           <div class="col-md-1 rowStyle timeBox">5PM</div>
           <textarea class="col-md-10 rowStyle" placeholder="Type here"></textarea>
-          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "5PM-log">Save</button>
+          <button type="button" class="col-md-1 btn btn-dark rowStyle save" id = "hour-5-log">Save</button>
         </div>       
     </div>
-    
-
-
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
